# Country-scale-simulation-of-social-networks

./: CMakeLists.txt  Makefile  README.md  main.cpp
Country-scale-simulation-of-social-networks-main/: Makefile  SimulatorLog.txt  family_edges.csv  population_database.csv
Country-scale-simulation-of-social-networks-main/data/: FirstName-Male.txt  Simulator.ini  sweden_population_ref_scb_2020.csv
Country-scale-simulation-of-social-networks-main/include/: INIConfigParser.h  PersonInfoGen.h  PopulationDB.h  TextFileLogger.h  defines.h
Country-scale-simulation-of-social-networks-main/src/: HMMEvents.cpp  PersonInfo.cpp  PersonInfoGen.cpp  PopulationDB.cpp  Simulator.cpp
data/: FirstName-Female.txt  HMMEvents.model  Simulator.ini  sweden_population_ref_scb_2020.csv
data-analysis/: main.py
data-analysis/1k/: family_edges.csv  population_database.csv
data-analysis/5k/: family_edges.csv  population_database.csv
include/: HMMEvents.h  HMM_Career.h  INIConfigParser.h  PersonInfo.h  PersonInfoGen.h  PopulationDB.h  TextFileLogger.h  Util.h  defines.h
src/: HMMEvents.cpp  HMM_Career.cpp  INIConfigParser.cpp  PersonInfo.cpp  PersonInfoGen.cpp  PopulationDB.cpp  Simulator.cpp  TextFileLogger.cpp  Util.cpp
